...

                        <TextView
                            android:id="@+id/tvHeader"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etEventTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                                    <com.google.android.material.textfield.TextInputEditText
                                        android:id="@+id/etEventStart"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
...

                                    <com.google.android.material.textfield.TextInputEditText
                                        android:id="@+id/etEventEnd"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
...

                                    <com.google.android.material.textfield.TextInputEditText
                                        android:id="@+id/etRegStart"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
...

                                    <com.google.android.material.textfield.TextInputEditText
                                        android:id="@+id/etRegEnd"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
...

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/etDrawDate"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
...

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etMaxCapacity"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etEventDetails"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etPlace"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...

                        <com.google.android.material.switchmaterial.SwitchMaterial
                            android:id="@+id/swLimitWaitingList"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...
                    <!-- Waiting List Limit Input Field -->
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilWaitingListLimit"
                        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
...

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etWaitingListLimit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...

                        <com.google.android.material.switchmaterial.SwitchMaterial
                            android:id="@+id/swRequireLocation"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                        <com.google.android.material.switchmaterial.SwitchMaterial
                            android:id="@+id/swIsPrivate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardQRCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

            <Button
                android:id="@+id/btnCreateEvent"
                android:layout_width="match_parent"
                android:layout_height="60dp"
...
