...
                    android:id="@+id/btnEditEvent"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:backgroundTint="@color/primary_blue"
                    android:minHeight="40dp"
                    android:paddingHorizontal="16dp"
                    android:text="Edit Event"
                    android:textAllCaps="false" />
            </LinearLayout>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cvPoster"
                android:layout_width="match_parent"
...
